# spotify_archiver

./: .gitignore  README.md  pyproject.toml  requirements.txt  spotify_archiver.code-workspace
.auth/: token.txt
code/: archive.py  authenticate.py  check_raw_data.py  create_databases.py  export-env.sh  generate_raw_data.py  save_playlists.py
